--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -3,6 +3,9 @@
     Flush        5
     Daemon       Off
     Log_Level    debug
+    HTTP_Server  On
+    HTTP_Listen  0.0.0.0
+    HTTP_PORT    2020
 
 [INPUT]
     Name         forward
