--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,8 @@ services:
          condition: service_started
        postgres:
          condition: service_healthy
+       pgbouncer:
+         condition: service_started
        fluent-bit:
          condition: service_started
     logging:
@@ -112,6 +114,37 @@ services:
       interval: 10s
       timeout: 10s
       retries: 10
+
+  pgbouncer:
+    image: bitnami/pgbouncer:1.16.0
+    container_name: pgbouncer
+    ports:
+      - 6432:6432
+    environment:
+      - POSTGRESQL_USERNAME=rexamp
+      - POSTGRESQL_PASSWORD=password
+      - POSTGRESQL_DATABASE=redisexamp
+      - POSTGRESQL_HOST=postgres
+      - PGBOUNCER_AUTH_TYPE=trust
+      - PGBOUNCER_PORT=6432
+      - PGBOUNCER_DATABASE=redisexamp
+      - PGBOUNCER_DEFAULT_POOL_SIZE=20
+      - PGBOUNCER_MAX_CLIENT_CONN=120
+    depends_on:
+      - postgres
+
+  pgbouncer_exporter:
+    image: spreaker/prometheus-pgbouncer-exporter:2.1.1
+    container_name: pgbouncer-exporter
+    ports:
+      - 9127:9127
+    environment:
+      - PGBOUNCER_EXPORTER_HOST=0.0.0.0
+      - PGBOUNCER_HOST=pgbouncer
+      - PGBOUNCER_USER=rexamp
+    depends_on:
+      - pgbouncer
+
 
   fluent-bit:
     container_name: fluent-bit
