--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -20,3 +20,7 @@ scrape_configs:
   - job_name: 'go-redis-app'
     static_configs:
       - targets: ['go-redis-app:8081']
+
+  - job_name: 'pgbouncer'
+    static_configs:
+      - targets: ['pgbouncer-exporter:9127']
