fix jaeger logging

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,6 +19,7 @@ http {
         proxy_pass http://backend;
         opentracing_operation_name $uri;
         opentracing_tag nginx.upstream_addr $upstream_addr;
+        opentracing_tag nginx.trace_id $request_id;
         opentracing_propagate_context;
       }
   }
