--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,12 @@
-load_module modules/ngx_http_opentracing_module.so;
+load_module modules/otel_ngx_module.so;
 events {}
 
 
 http {
-  opentracing_load_tracer /usr/local/lib/libjaegertracing_plugin.so /etc/nginx/jaeger-nginx-config.json;
-  opentracing on;
-  opentracing_tag http_user_agent $http_user_agent;
+  opentelemetry_config /etc/nginx/otel-nginx.toml;
+  opentelemetry_operation_name nginx;
+  access_log stderr;
+  error_log stderr debug;
 
   upstream backend {
     server go-redis-app:8080;
@@ -16,11 +17,9 @@ http {
       server_name _;
 
       location ~ / {
+        opentelemetry_capture_headers on;
+        opentelemetry_propagate;
         proxy_pass http://backend;
-        opentracing_operation_name $uri;
-        opentracing_tag nginx.upstream_addr $upstream_addr;
-        opentracing_tag nginx.trace_id $request_id;
-        opentracing_propagate_context;
       }
   }
 
