--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,20 @@
 version: '3.7'
 services:
-  nginx:
-    image: opentracing/nginx-opentracing
-    container_name: nginx
+  otelcol:
+    image: otel/opentelemetry-collector-contrib:0.62.1
+    container_name: otelcol
+    command: ["--config=/etc/otel/config.yaml"]
     volumes:
+      - ./otelcol/config.yaml:/etc/otel/config.yaml
+  nginx:
+    image: nginx:1.21.6
+    container_name: nginx
+    entrypoint: nginx -g 'daemon off;'
+#    command: ['nginx', '-g', 'daemon off;']
+    volumes:
+      - ./nginx/otel_ngx_module.so:/etc/nginx/modules/otel_ngx_module.so:ro
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/jaeger-nginx-config.json:/etc/nginx/jaeger-nginx-config.json:ro
+      - ./nginx/otel-nginx.toml:/etc/nginx/otel-nginx.toml:ro
     ports:
       - "80:80"
     logging:
@@ -81,8 +90,9 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - REDIS=${REDIS}
       - SENTRY_DSN=${SENTRY_DSN}
-      - JAEGER_AGENT_HOST=jaeger
-      - JAEGER_AGENT_PORT=6831
+      - JAEGER_AGENT_HOST=otelcol
+      - JAEGER_AGENT_PORT=14278
+      - APP_LOG_LEVEL=INFO
     ports:
       - "8080:8080"
       - "8081:8081"
@@ -120,6 +130,13 @@ services:
   jaeger:
     container_name: jaeger
     image: jaegertracing/all-in-one:latest
+    volumes:
+      - ./jaeger/jaeger-ui.json:/usr/local/jaeger/jaeger-ui.json
+    command: --query.ui-config /usr/local/jaeger/jaeger-ui.json
+    environment:
+      - METRICS_STORAGE_TYPE=prometheus
+      - PROMETHEUS_SERVER_URL=http://prometheus:9090
+      - QUERY_UI_CONFIG=/usr/local/jaeger/jaeger-ui.json
     ports:
       - "6831:6831/udp"
       - "16686:16686"
