add save artifact to actions

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,6 +40,6 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: linux-binary
-        path: ./.bin/redis-cache-example
+        path: ./app/.bin/redis-cache-example
         retention-days: 90
 
