run github actions when tac is created

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,9 +5,11 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+#    branches: [ "main" ]
+    tags:
+      - "*"
+#  pull_request:
+#    branches: [ "main" ]
 
 jobs:
 
