--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,13 +18,23 @@ jobs:
         with:
           go-version: 1.18
 
-      - name: Build
-        env:
-          CGO_ENABLED: "0"
-          GOOS: "linux"
-        run: cd ./app && go build -o ./.bin/redis-cache-example -v ./cmd/redis-cache-example/main.go
+#      - name: Build
+#        env:
+#          CGO_ENABLED: "0"
+#          GOOS: "linux"
+#        run: cd ./app && go build -o ./.bin/redis-cache-example -v ./cmd/redis-cache-example/main.go
+#
+#      - uses: ncipollo/release-action@v1
+#        with:
+#          artifacts: "./app/.bin/redis-cache-example"
+#          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: ncipollo/release-action@v1
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v3
         with:
-          artifacts: "./app/.bin/redis-cache-example"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          distribution: goreleaser
+          version: latest
+          args: release --rm-dist
+          workdir: ./app
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
