--- a/app/.goreleaser.yml
+++ b/app/.goreleaser.yml
@@ -24,7 +24,7 @@ builds:
       - goos: windows
         goarch: amd64
 archives:
-  - name_template: "redis-cache-example-{{ .Version }}.{{ .Os }}-{{ .Arch }}{{ end }}"
+  - name_template: "redis-cache-example-{{ .Version }}.{{ .Os }}-{{ .Arch }}"
     wrap_in_directory: true
 checksum:
   name_template: checksums.txt
