fix docker builds in goreleaser

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,8 +1,6 @@
-FROM golang:1.17.1-alpine3.14 AS builder
-
-WORKDIR /usr/local/go/src/
-
-COPY . /usr/local/go/src/
+FROM golang:1.18-alpine3.14 AS builder
+COPY . /usr/local/go/src/redis-cache
+WORKDIR /usr/local/go/src/redis-cache
 
 RUN go clean --modcache
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -mod=readonly -o redis-cache cmd/redis-cache-example/main.go
@@ -12,7 +10,7 @@ ENV DATABASE_URL=db
 ENV REDIS=redis
 ENV SENTRY_DSN=dsn
 WORKDIR /app
-COPY --from=builder /usr/local/go/src/redis-cache /app/
+COPY --from=builder /usr/local/go/src/redis-cache/redis-cache /app/
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 CMD ["/app/redis-cache"]
